[tool.poetry]
name = "Weather Watchdog"
version = "0.1.0"
description = "This is a Python project that monitors weather in preferred locations using the OpenWeatherMap API."
authors = ["Lidi Manov <peru12003@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2024.1"
requests = "^2.32.3"
streamlit = "^1.35.0"
streamlit-option-menu = "^0.3.13"
tomlkit = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
